--- a/index.html
+++ b/index.html
@@ -45,6 +45,14 @@
                     style="font-size: 11px;color: #333333;text-decoration: none;"><a href="https://jp.investing.com/"
                         rel="nofollow" target="_blank" style="font-size: 11px;color: #06529D; font-weight: bold;"
                         class="underline_link">Investing.com 日本</a> によって機能された外国為替チャート。</span></span></div>
+        <iframe height="355" width="430"
+            src="https://sslcharts.forexprostools.com/index.php?force_lang=11&pair_ID=68&timescale=300&candles=50&style=candles"></iframe><br />
+        <div style="width:500px"><a target="_blank" href="https://jp.investing.com"><img
+                    src="https://wmt-invdn-com.akamaized.net/forexpros_jp_logo.png" alt="Investing.com"
+                    title="Investing.com" style="float:left" border="0" /></a><span style="float:right"><span
+                    style="font-size: 11px;color: #333333;text-decoration: none;"><a href="https://jp.investing.com/"
+                        rel="nofollow" target="_blank" style="font-size: 11px;color: #06529D; font-weight: bold;"
+                        class="underline_link">Investing.com 日本</a> によって機能された外国為替チャート。</span></span></div>
     </p>
 </body>
 
