--- a/index.html
+++ b/index.html
@@ -9,41 +9,41 @@
     <h2>じっけんちゅう</h2>
     <p> <iframe height="355" width="430"
             src="https://sslcharts.forexprostools.com/index.php?force_lang=11&pair_ID=3&timescale=300&candles=50&style=candles"></iframe><br />
-        <div style="width:500px"><a target="_blank" href="https://jp.investing.com"><img
+        <!-- <div style="width:500px"><a target="_blank" href="https://jp.investing.com"><img
                     src="https://wmt-invdn-com.akamaized.net/forexpros_jp_logo.png" alt="Investing.com"
                     title="Investing.com" style="float:left" border="0" /></a><span style="float:right"><span
                     style="font-size: 11px;color: #333333;text-decoration: none;"><a href="https://jp.investing.com/"
                         rel="nofollow" target="_blank" style="font-size: 11px;color: #06529D; font-weight: bold;"
-                        class="underline_link">Investing.com 日本</a> によって機能された外国為替チャート。</span></span></div>
-        <!-- <iframe height="355" width="430"
+                        class="underline_link">Investing.com 日本</a> によって機能された外国為替チャート。</span></span></div> -->
+        <iframe height="355" width="430"
             src="https://sslcharts.forexprostools.com/index.php?force_lang=11&pair_ID=2&timescale=300&candles=50&style=candles"></iframe><br />
-        <div style="width:500px"><a target="_blank" href="https://jp.investing.com"><img
+        <!-- <div style="width:500px"><a target="_blank" href="https://jp.investing.com"><img
                     src="https://wmt-invdn-com.akamaized.net/forexpros_jp_logo.png" alt="Investing.com"
                     title="Investing.com" style="float:left" border="0" /></a><span style="float:right"><span
                     style="font-size: 11px;color: #333333;text-decoration: none;"><a href="https://jp.investing.com/"
                         rel="nofollow" target="_blank" style="font-size: 11px;color: #06529D; font-weight: bold;"
-                        class="underline_link">Investing.com 日本</a> によって機能された外国為替チャート。</span></span></div>
+                        class="underline_link">Investing.com 日本</a> によって機能された外国為替チャート。</span></span></div> -->
         <iframe height="355" width="430"
             src="https://sslcharts.forexprostools.com/index.php?force_lang=11&pair_ID=1&timescale=300&candles=50&style=candles"></iframe><br />
-        <div style="width:500px"><a target="_blank" href="https://jp.investing.com"><img
+        <!-- <div style="width:500px"><a target="_blank" href="https://jp.investing.com"><img
                     src="https://wmt-invdn-com.akamaized.net/forexpros_jp_logo.png" alt="Investing.com"
                     title="Investing.com" style="float:left" border="0" /></a><span style="float:right"><span
                     style="font-size: 11px;color: #333333;text-decoration: none;"><a href="https://jp.investing.com/"
                         rel="nofollow" target="_blank" style="font-size: 11px;color: #06529D; font-weight: bold;"
-                        class="underline_link">Investing.com 日本</a> によって機能された外国為替チャート。</span></span></div>
+                        class="underline_link">Investing.com 日本</a> によって機能された外国為替チャート。</span></span></div> -->
         <iframe height="355" width="430"
             src="https://sslcharts.forexprostools.com/index.php?force_lang=11&pair_ID=68&timescale=300&candles=50&style=candles"></iframe><br />
-        <div style="width:500px"><a target="_blank" href="https://jp.investing.com"><img
+        <!-- <div style="width:500px"><a target="_blank" href="https://jp.investing.com"><img
                     src="https://wmt-invdn-com.akamaized.net/forexpros_jp_logo.png" alt="Investing.com"
                     title="Investing.com" style="float:left" border="0" /></a><span style="float:right"><span
                     style="font-size: 11px;color: #333333;text-decoration: none;"><a href="https://jp.investing.com/"
                         rel="nofollow" target="_blank" style="font-size: 11px;color: #06529D; font-weight: bold;"
-                        class="underline_link">Investing.com 日本</a> によって機能された外国為替チャート。</span></span></div>
+                        class="underline_link">Investing.com 日本</a> によって機能された外国為替チャート。</span></span></div> -->
         <iframe name="iframe2" src="https://jp.widgets.investing.com/top-cryptocurrencies?theme=darkTheme" width="35%"
             height="60%" frameborder="0" allowtransparency="true" marginwidth="0" marginheight="0"> ほい </iframe>
         <div class="poweredBy" style="font-family: Arial, Helvetica, sans-serif;">提供は <a
                 href="https://jp.investing.com?utm_source=WMT&amp;utm_medium=referral&amp;utm_campaign=TOP_CRYPTOCURRENCIES&amp;utm_content=Footer%20Link"
-                target="_blank" rel="nofollow">Investing.com</a></div> -->
+                target="_blank" rel="nofollow">Investing.com</a></div>
 
     </p>
 </body>
