--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
         <div class="poweredBy" style="font-family: Arial, Helvetica, sans-serif;">提供は <a
                 href="https://jp.investing.com?utm_source=WMT&amp;utm_medium=referral&amp;utm_campaign=TOP_CRYPTOCURRENCIES&amp;utm_content=Footer%20Link"
                 target="_blank" rel="nofollow">Investing.com</a></div>
-
+        <div class="nomics-ticker-widget" data-name="PETROLEUM" data-base="OIL" data-quote="USD"></div>
+        <script src="https://widget.nomics.com/embed.js"></script>
     </p>
 </body>
 
