add minimal CSS

--- a/index.html
+++ b/index.html
@@ -1,13 +1,32 @@
 <html>
-<title>MC Charts</title>
 
 <head>
-
+    <title>MC Charts</title>
+    <style>
+        .container {
+            margin: 0 auto;
+            padding: 5px;
+            width: 90%;
+            height: 90%;
+            background-color: #fff;
+            column-count: 3;
+            column-gap: 0;
+        }
+        .grid {
+            padding: 5px;
+            -webkit-column-break-inside: avoid;
+            page-break-inside: avoid;
+            break-inside: avoid;
+            width: 90%;
+            height: 30%
+        }
+    </style>
 </head>
 
 <body>
     <h2>じっけんちゅう</h2>
-    <p> <iframe height="355" width="430"
+    <p class="container"> 
+        <iframe class="grid"
             src="https://sslcharts.forexprostools.com/index.php?force_lang=11&pair_ID=3&timescale=300&candles=50&style=candles"></iframe><br />
         <!-- <div style="width:500px"><a target="_blank" href="https://jp.investing.com"><img
                     src="https://wmt-invdn-com.akamaized.net/forexpros_jp_logo.png" alt="Investing.com"
@@ -15,7 +34,7 @@
                     style="font-size: 11px;color: #333333;text-decoration: none;"><a href="https://jp.investing.com/"
                         rel="nofollow" target="_blank" style="font-size: 11px;color: #06529D; font-weight: bold;"
                         class="underline_link">Investing.com 日本</a> によって機能された外国為替チャート。</span></span></div> -->
-        <iframe height="355" width="430"
+        <iframe class="grid" 
             src="https://sslcharts.forexprostools.com/index.php?force_lang=11&pair_ID=2&timescale=300&candles=50&style=candles"></iframe><br />
         <!-- <div style="width:500px"><a target="_blank" href="https://jp.investing.com"><img
                     src="https://wmt-invdn-com.akamaized.net/forexpros_jp_logo.png" alt="Investing.com"
@@ -23,7 +42,7 @@
                     style="font-size: 11px;color: #333333;text-decoration: none;"><a href="https://jp.investing.com/"
                         rel="nofollow" target="_blank" style="font-size: 11px;color: #06529D; font-weight: bold;"
                         class="underline_link">Investing.com 日本</a> によって機能された外国為替チャート。</span></span></div> -->
-        <iframe height="355" width="430"
+        <iframe class="grid"
             src="https://sslcharts.forexprostools.com/index.php?force_lang=11&pair_ID=1&timescale=300&candles=50&style=candles"></iframe><br />
         <!-- <div style="width:500px"><a target="_blank" href="https://jp.investing.com"><img
                     src="https://wmt-invdn-com.akamaized.net/forexpros_jp_logo.png" alt="Investing.com"
@@ -31,7 +50,7 @@
                     style="font-size: 11px;color: #333333;text-decoration: none;"><a href="https://jp.investing.com/"
                         rel="nofollow" target="_blank" style="font-size: 11px;color: #06529D; font-weight: bold;"
                         class="underline_link">Investing.com 日本</a> によって機能された外国為替チャート。</span></span></div> -->
-        <iframe height="355" width="430"
+        <iframe class="grid" 
             src="https://sslcharts.forexprostools.com/index.php?force_lang=11&pair_ID=68&timescale=300&candles=50&style=candles"></iframe><br />
         <!-- <div style="width:500px"><a target="_blank" href="https://jp.investing.com"><img
                     src="https://wmt-invdn-com.akamaized.net/forexpros_jp_logo.png" alt="Investing.com"
@@ -39,12 +58,12 @@
                     style="font-size: 11px;color: #333333;text-decoration: none;"><a href="https://jp.investing.com/"
                         rel="nofollow" target="_blank" style="font-size: 11px;color: #06529D; font-weight: bold;"
                         class="underline_link">Investing.com 日本</a> によって機能された外国為替チャート。</span></span></div> -->
-        <iframe name="iframe2" src="https://jp.widgets.investing.com/top-cryptocurrencies?theme=darkTheme" width="35%"
+        <iframe class="grid" src="https://jp.widgets.investing.com/top-cryptocurrencies?theme=darkTheme" width="35%"
             height="60%" frameborder="0" allowtransparency="true" marginwidth="0" marginheight="0"> ほい </iframe>
-        <div class="poweredBy" style="font-family: Arial, Helvetica, sans-serif;">提供は <a
+        <!-- <div class="poweredBy" style="font-family: Arial, Helvetica, sans-serif;">提供は <a
                 href="https://jp.investing.com?utm_source=WMT&amp;utm_medium=referral&amp;utm_campaign=TOP_CRYPTOCURRENCIES&amp;utm_content=Footer%20Link"
-                target="_blank" rel="nofollow">Investing.com</a></div>
-        <div class="nomics-ticker-widget" data-name="PETROLEUM" data-base="OIL" data-quote="USD"></div>
+                target="_blank" rel="nofollow">Investing.com</a></div> -->
+        <div class="grid nomics-ticker-widget" data-name="PETROLEUM" data-base="OIL" data-quote="USD"></div>
         <script src="https://widget.nomics.com/embed.js"></script>
     </p>
 </body>
