--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             column-count: 3;
             column-gap: 0;
         }
+
         .grid {
             padding: 5px;
             -webkit-column-break-inside: avoid;
@@ -25,7 +26,7 @@
 
 <body>
     <h2>じっけんちゅう</h2>
-    <p class="container"> 
+    <p class="container">
         <iframe class="grid"
             src="https://sslcharts.forexprostools.com/index.php?force_lang=11&pair_ID=3&timescale=300&candles=50&style=candles"></iframe><br />
         <!-- <div style="width:500px"><a target="_blank" href="https://jp.investing.com"><img
@@ -34,7 +35,7 @@
                     style="font-size: 11px;color: #333333;text-decoration: none;"><a href="https://jp.investing.com/"
                         rel="nofollow" target="_blank" style="font-size: 11px;color: #06529D; font-weight: bold;"
                         class="underline_link">Investing.com 日本</a> によって機能された外国為替チャート。</span></span></div> -->
-        <iframe class="grid" 
+        <iframe class="grid"
             src="https://sslcharts.forexprostools.com/index.php?force_lang=11&pair_ID=2&timescale=300&candles=50&style=candles"></iframe><br />
         <!-- <div style="width:500px"><a target="_blank" href="https://jp.investing.com"><img
                     src="https://wmt-invdn-com.akamaized.net/forexpros_jp_logo.png" alt="Investing.com"
@@ -50,7 +51,7 @@
                     style="font-size: 11px;color: #333333;text-decoration: none;"><a href="https://jp.investing.com/"
                         rel="nofollow" target="_blank" style="font-size: 11px;color: #06529D; font-weight: bold;"
                         class="underline_link">Investing.com 日本</a> によって機能された外国為替チャート。</span></span></div> -->
-        <iframe class="grid" 
+        <iframe class="grid"
             src="https://sslcharts.forexprostools.com/index.php?force_lang=11&pair_ID=68&timescale=300&candles=50&style=candles"></iframe><br />
         <!-- <div style="width:500px"><a target="_blank" href="https://jp.investing.com"><img
                     src="https://wmt-invdn-com.akamaized.net/forexpros_jp_logo.png" alt="Investing.com"
@@ -58,13 +59,23 @@
                     style="font-size: 11px;color: #333333;text-decoration: none;"><a href="https://jp.investing.com/"
                         rel="nofollow" target="_blank" style="font-size: 11px;color: #06529D; font-weight: bold;"
                         class="underline_link">Investing.com 日本</a> によって機能された外国為替チャート。</span></span></div> -->
-        <iframe class="grid" src="https://jp.widgets.investing.com/top-cryptocurrencies?theme=darkTheme" width="35%"
-            height="60%" frameborder="0" allowtransparency="true" marginwidth="0" marginheight="0"> ほい </iframe>
+        <!-- <iframe class="grid" src="https://jp.widgets.investing.com/top-cryptocurrencies?theme=darkTheme" width="35%"
+            height="60%" frameborder="0" allowtransparency="true" marginwidth="0" marginheight="0"> ほい </iframe> -->
         <!-- <div class="poweredBy" style="font-family: Arial, Helvetica, sans-serif;">提供は <a
                 href="https://jp.investing.com?utm_source=WMT&amp;utm_medium=referral&amp;utm_campaign=TOP_CRYPTOCURRENCIES&amp;utm_content=Footer%20Link"
                 target="_blank" rel="nofollow">Investing.com</a></div> -->
-        <div class="grid nomics-ticker-widget" data-name="PETROLEUM" data-base="OIL" data-quote="USD"></div>
-        <script src="https://widget.nomics.com/embed.js"></script>
+        <iframe class="grid"
+            src="https://sslcharts.forexprostools.com/index.php?force_lang=11&pair_ID=21&timescale=300&candles=50&style=candles"></iframe><br />
+        <!-- <div style="width:500px"><a target="_blank" href="https://jp.investing.com"><img
+                    src="https://wmt-invdn-com.akamaized.net/forexpros_jp_logo.png" alt="Investing.com"
+                    title="Investing.com" style="float:left" border="0" /></a><span style="float:right"><span
+                    style="font-size: 11px;color: #333333;text-decoration: none;"><a href="https://jp.investing.com/"
+                        rel="nofollow" target="_blank" style="font-size: 11px;color: #06529D; font-weight: bold;"
+                        class="underline_link">Investing.com 日本</a> によって機能された外国為替チャート。</span></span></div> -->
+        <div class="grid">
+            <div class="nomics-ticker-widget" data-name="PETROLEUM" data-base="OIL" data-quote="USD"></div>
+            <script src="https://widget.nomics.com/embed.js"></script>
+        </div>
     </p>
 </body>
 
