--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                         class="underline_link">Investing.com 日本</a> によって機能された外国為替チャート。</span></span></div> -->
         <!-- <span class="grid" id="news"></span> -->
         <iframe class="grid"
-            src="https://ssltvc.forexprostools.com/?pair_ID=8827&height=480&width=650&interval=1800&plotStyle=area&domain_ID=11&lang_ID=11&timezone_ID=27"></iframe>
+            src="https://ssltvc.forexprostools.com/?pair_ID=8827&interval=1800&plotStyle=area&domain_ID=11&lang_ID=11&timezone_ID=27"></iframe>
         <iframe class="grid"
             src="https://ssltvc.forexprostools.com/?pair_ID=44336&height=480&width=650&interval=1800&plotStyle=area&domain_ID=11&lang_ID=11&timezone_ID=27"></iframe>
         <iframe class="grid"
