--- a/index.html
+++ b/index.html
@@ -125,9 +125,11 @@
         </span> -->
     </p>
     <p class="container2">
-        <iframe class="grid2" height="480" width="650" src="https://ssltvc.forexprostools.com/?pair_ID=8827&height=480&width=650&interval=1800&plotStyle=area&domain_ID=11&lang_ID=11&timezone_ID=27"></iframe>
-        <iframe class="grid2" height="480" width="650" src="https://ssltvc.forexprostools.com/?pair_ID=178&height=480&width=650&interval=1800&plotStyle=area&domain_ID=11&lang_ID=11&timezone_ID=27"></iframe>
-        <iframe class="grid2" height="480" width="650" src="https://ssltvc.forexprostools.com/?pair_ID=44336&height=480&width=650&interval=1800&plotStyle=area&domain_ID=11&lang_ID=11&timezone_ID=27"></iframe>
+        <iframe height="480" width="650" src="https://ssltvc.forexprostools.com/?pair_ID=8827&height=480&width=650&interval=1800&plotStyle=area&domain_ID=11&lang_ID=11&timezone_ID=27"></iframe>
+        <iframe height="480" width="650" src="https://ssltvc.forexprostools.com/?pair_ID=178&height=480&width=650&interval=1800&plotStyle=area&domain_ID=11&lang_ID=11&timezone_ID=27"></iframe>
+    </p>
+    <p class="container2">
+        <iframe height="480" width="650" src="https://ssltvc.forexprostools.com/?pair_ID=44336&height=480&width=650&interval=1800&plotStyle=area&domain_ID=11&lang_ID=11&timezone_ID=27"></iframe>
     </p>
 </body>
 
