--- a/index.html
+++ b/index.html
@@ -123,9 +123,10 @@
             <div class="nomics-ticker-widget" data-name="PETROLEUM" data-base="OIL" data-quote="USD"></div>
             <script src="https://widget.nomics.com/embed.js"></script>
         </span> -->
+        <iframe class="grid" src="https://ssltvc.forexprostools.com/?pair_ID=8827&height=480&width=380&interval=1800&plotStyle=area&domain_ID=11&lang_ID=11&timezone_ID=27"></iframe>
     </p>
     <p class="container2">
-        <iframe height="480" width="380" src="https://ssltvc.forexprostools.com/?pair_ID=8827&height=480&width=380&interval=1800&plotStyle=area&domain_ID=11&lang_ID=11&timezone_ID=27"></iframe>
+        <!-- <iframe height="480" width="380" src="https://ssltvc.forexprostools.com/?pair_ID=8827&height=480&width=380&interval=1800&plotStyle=area&domain_ID=11&lang_ID=11&timezone_ID=27"></iframe> -->
         <iframe height="480" width="650" src="https://ssltvc.forexprostools.com/?pair_ID=178&height=480&width=650&interval=1800&plotStyle=area&domain_ID=11&lang_ID=11&timezone_ID=27"></iframe>
     </p>
     <p class="container2">
