--- a/index.html
+++ b/index.html
@@ -126,6 +126,7 @@
     </p>
     <p class="container2">
         <iframe height="480" width="380" src="https://ssltvc.forexprostools.com/?pair_ID=8827&height=480&width=380&interval=1800&plotStyle=area&domain_ID=11&lang_ID=11&timezone_ID=27"></iframe>
+        <iframe class="grid2" src="https://ssltvc.forexprostools.com/?pair_ID=8827&interval=1800&plotStyle=area&domain_ID=11&lang_ID=11&timezone_ID=27"></iframe>
         <iframe height="480" width="380" src="https://ssltvc.forexprostools.com/?pair_ID=178&height=480&width=380&interval=1800&plotStyle=area&domain_ID=11&lang_ID=11&timezone_ID=27"></iframe>
         <iframe height="480" width="380" src="https://ssltvc.forexprostools.com/?pair_ID=44336&height=480&width=380&interval=1800&plotStyle=area&domain_ID=11&lang_ID=11&timezone_ID=27"></iframe>
     </p>
