--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@
         </span> -->
     </p>
     <p class="container2">
-        <iframe class="grid2" src="https://ssltvc.forexprostools.com/?pair_ID=8827&interval=1800&plotStyle=bars&domain_ID=11&lang_ID=11&timezone_ID=27"></iframe><br/>
-        <iframe class="grid2" src="https://ssltvc.forexprostools.com/?pair_ID=178&interval=1800&plotStyle=bars&domain_ID=11&lang_ID=11&timezone_ID=27"></iframe><br/>
+        <iframe class="grid2" src="https://ssltvc.forexprostools.com/?pair_ID=8827&interval=1800&plotStyle=bars&domain_ID=11&lang_ID=11&timezone_ID=27"></iframe>
+        <iframe class="grid2" src="https://ssltvc.forexprostools.com/?pair_ID=178&interval=1800&plotStyle=bars&domain_ID=11&lang_ID=11&timezone_ID=27"></iframe>
         <iframe class="grid2" src="https://ssltvc.forexprostools.com/?pair_ID=44336&interval=1800&plotStyle=bars&domain_ID=11&lang_ID=11&timezone_ID=27"></iframe>
     </p>
 </body>
