--- a/index.html
+++ b/index.html
@@ -1,8 +1,100 @@
-<html>
+<!doctype html>
+<html lang="ja">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-<head>
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
     <title>MC Charts</title>
-    <style>
+  </head>
+  <body>
+    <h2>じっけんちゅう</h2>
+
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+
+    <div class="container">
+        <div class="row">
+            <iframe class="col-lg" id="hoge"
+                src="https://sslcharts.forexprostools.com/index.php?force_lang=11&pair_ID=3&timescale=1800&candles=50&style=candles"></iframe>
+            <!-- <div style="width:500px"><a target="_blank" href="https://jp.investing.com"><img
+                        src="https://wmt-invdn-com.akamaized.net/forexpros_jp_logo.png" alt="Investing.com"
+                        title="Investing.com" style="float:left" border="0" /></a><span style="float:right"><span
+                        style="font-size: 11px;color: #333333;text-decoration: none;"><a href="https://jp.investing.com/"
+                            rel="nofollow" target="_blank" style="font-size: 11px;color: #06529D; font-weight: bold;"
+                            class="underline_link">Investing.com 日本</a> によって機能された外国為替チャート。</span></span></div> -->
+            <iframe class="col-lg"
+                src="https://sslcharts.forexprostools.com/index.php?force_lang=11&pair_ID=2&timescale=1800&candles=50&style=candles"></iframe>
+            <!-- <div style="width:500px"><a target="_blank" href="https://jp.investing.com"><img
+                        src="https://wmt-invdn-com.akamaized.net/forexpros_jp_logo.png" alt="Investing.com"
+                        title="Investing.com" style="float:left" border="0" /></a><span style="float:right"><span
+                        style="font-size: 11px;color: #333333;text-decoration: none;"><a href="https://jp.investing.com/"
+                            rel="nofollow" target="_blank" style="font-size: 11px;color: #06529D; font-weight: bold;"
+                            class="underline_link">Investing.com 日本</a> によって機能された外国為替チャート。</span></span></div> -->
+            <iframe class="col-lg"
+                src="https://sslcharts.forexprostools.com/index.php?force_lang=11&pair_ID=1&timescale=1800&candles=50&style=candles"></iframe>
+            <!-- <div style="width:500px"><a target="_blank" href="https://jp.investing.com"><img
+                        src="https://wmt-invdn-com.akamaized.net/forexpros_jp_logo.png" alt="Investing.com"
+                        title="Investing.com" style="float:left" border="0" /></a><span style="float:right"><span
+                        style="font-size: 11px;color: #333333;text-decoration: none;"><a href="https://jp.investing.com/"
+                            rel="nofollow" target="_blank" style="font-size: 11px;color: #06529D; font-weight: bold;"
+                            class="underline_link">Investing.com 日本</a> によって機能された外国為替チャート。</span></span></div> -->
+        </div>
+        <div class="row">
+            <iframe class="col-lg"
+                src="https://sslcharts.forexprostools.com/index.php?force_lang=11&pair_ID=68&timescale=1800&candles=50&style=candles"></iframe>
+            <!-- <div style="width:500px"><a target="_blank" href="https://jp.investing.com"><img
+                        src="https://wmt-invdn-com.akamaized.net/forexpros_jp_logo.png" alt="Investing.com"
+                        title="Investing.com" style="float:left" border="0" /></a><span style="float:right"><span
+                        style="font-size: 11px;color: #333333;text-decoration: none;"><a href="https://jp.investing.com/"
+                            rel="nofollow" target="_blank" style="font-size: 11px;color: #06529D; font-weight: bold;"
+                            class="underline_link">Investing.com 日本</a> によって機能された外国為替チャート。</span></span></div> -->
+            <!-- <iframe class="grid" src="https://jp.widgets.investing.com/top-cryptocurrencies?theme=darkTheme" width="35%"
+                height="60%" frameborder="0" allowtransparency="true" marginwidth="0" marginheight="0"> ほい </iframe> -->
+            <!-- <div class="poweredBy" style="font-family: Arial, Helvetica, sans-serif;">提供は <a
+                    href="https://jp.investing.com?utm_source=WMT&amp;utm_medium=referral&amp;utm_campaign=TOP_CRYPTOCURRENCIES&amp;utm_content=Footer%20Link"
+                    target="_blank" rel="nofollow">Investing.com</a></div> -->
+            <iframe class="col-lg"
+                src="https://sslcharts.forexprostools.com/index.php?force_lang=11&pair_ID=21&timescale=1800&candles=50&style=candles"></iframe>
+            <!-- <div style="width:500px"><a target="_blank" href="https://jp.investing.com"><img
+                        src="https://wmt-invdn-com.akamaized.net/forexpros_jp_logo.png" alt="Investing.com"
+                        title="Investing.com" style="float:left" border="0" /></a><span style="float:right"><span
+                        style="font-size: 11px;color: #333333;text-decoration: none;"><a href="https://jp.investing.com/"
+                            rel="nofollow" target="_blank" style="font-size: 11px;color: #06529D; font-weight: bold;"
+                            class="underline_link">Investing.com 日本</a> によって機能された外国為替チャート。</span></span></div> -->
+            <!-- <span class="grid" id="news"></span> -->
+            <!-- <iframe class="grid"
+                src="https://ssltvc.forexprostools.com/?pair_ID=8827&interval=1800&plotStyle=area&domain_ID=11&lang_ID=11&timezone_ID=27"></iframe> -->
+            <!-- <iframe class="grid"
+                src="https://ssltvc.forexprostools.com/?pair_ID=44336&height=480&width=650&interval=1800&plotStyle=area&domain_ID=11&lang_ID=11&timezone_ID=27"></iframe> -->
+            <!-- <iframe class="grid"
+                src="https://ssltvc.forexprostools.com/?pair_ID=178&height=480&width=650&interval=1800&plotStyle=area&domain_ID=11&lang_ID=11&timezone_ID=27"></iframe> -->
+            <!-- <span class="grid">
+                <div class="nomics-ticker-widget" data-name="PETROLEUM" data-base="OIL" data-quote="USD"></div>
+                <script src="https://widget.nomics.com/embed.js"></script>
+            </span> -->
+            <div class="col-lg"></div>
+        </div>
+    </div>
+    <div class="container">
+        <div class="row">
+            <iframe class="col-lg" src="https://ssltvc.forexprostools.com/?pair_ID=8827&interval=1800&plotStyle=bars&domain_ID=11&lang_ID=11&timezone_ID=27"></iframe>
+            <iframe class="col-lg" src="https://ssltvc.forexprostools.com/?pair_ID=178&interval=1800&plotStyle=bars&domain_ID=11&lang_ID=11&timezone_ID=27"></iframe>
+            <iframe class="col-lg" src="https://ssltvc.forexprostools.com/?pair_ID=44336&interval=1800&plotStyle=bars&domain_ID=11&lang_ID=11&timezone_ID=27"></iframe>    
+        </div>
+    </div>
+
+</body>
+</html>
+
+<!-- <head> -->
+    <!-- <style>
         .container {
             margin: 0 auto;
             padding: 5px;
@@ -40,8 +132,8 @@
             width: 90%;
             height: 60%
         }
-    </style>
-    <script>
+    </style> -->
+    <!-- <script>
         var prev_rate = 0;
         window.onload = function () {
             setInterval(async function () {
@@ -61,74 +153,5 @@
                     });
             }, 10000);
         }
-    </script>
-</head>
-
-<body>
-    <h2>じっけんちゅう</h2>
-    <p class="container">
-        <iframe class="grid" id="hoge"
-            src="https://sslcharts.forexprostools.com/index.php?force_lang=11&pair_ID=3&timescale=1800&candles=50&style=candles"></iframe>
-        <!-- <div style="width:500px"><a target="_blank" href="https://jp.investing.com"><img
-                    src="https://wmt-invdn-com.akamaized.net/forexpros_jp_logo.png" alt="Investing.com"
-                    title="Investing.com" style="float:left" border="0" /></a><span style="float:right"><span
-                    style="font-size: 11px;color: #333333;text-decoration: none;"><a href="https://jp.investing.com/"
-                        rel="nofollow" target="_blank" style="font-size: 11px;color: #06529D; font-weight: bold;"
-                        class="underline_link">Investing.com 日本</a> によって機能された外国為替チャート。</span></span></div> -->
-        <iframe class="grid"
-            src="https://sslcharts.forexprostools.com/index.php?force_lang=11&pair_ID=2&timescale=1800&candles=50&style=candles"></iframe>
-        <!-- <div style="width:500px"><a target="_blank" href="https://jp.investing.com"><img
-                    src="https://wmt-invdn-com.akamaized.net/forexpros_jp_logo.png" alt="Investing.com"
-                    title="Investing.com" style="float:left" border="0" /></a><span style="float:right"><span
-                    style="font-size: 11px;color: #333333;text-decoration: none;"><a href="https://jp.investing.com/"
-                        rel="nofollow" target="_blank" style="font-size: 11px;color: #06529D; font-weight: bold;"
-                        class="underline_link">Investing.com 日本</a> によって機能された外国為替チャート。</span></span></div> -->
-        <iframe class="grid"
-            src="https://sslcharts.forexprostools.com/index.php?force_lang=11&pair_ID=1&timescale=1800&candles=50&style=candles"></iframe>
-        <!-- <div style="width:500px"><a target="_blank" href="https://jp.investing.com"><img
-                    src="https://wmt-invdn-com.akamaized.net/forexpros_jp_logo.png" alt="Investing.com"
-                    title="Investing.com" style="float:left" border="0" /></a><span style="float:right"><span
-                    style="font-size: 11px;color: #333333;text-decoration: none;"><a href="https://jp.investing.com/"
-                        rel="nofollow" target="_blank" style="font-size: 11px;color: #06529D; font-weight: bold;"
-                        class="underline_link">Investing.com 日本</a> によって機能された外国為替チャート。</span></span></div> -->
-        <iframe class="grid"
-            src="https://sslcharts.forexprostools.com/index.php?force_lang=11&pair_ID=68&timescale=1800&candles=50&style=candles"></iframe>
-        <!-- <div style="width:500px"><a target="_blank" href="https://jp.investing.com"><img
-                    src="https://wmt-invdn-com.akamaized.net/forexpros_jp_logo.png" alt="Investing.com"
-                    title="Investing.com" style="float:left" border="0" /></a><span style="float:right"><span
-                    style="font-size: 11px;color: #333333;text-decoration: none;"><a href="https://jp.investing.com/"
-                        rel="nofollow" target="_blank" style="font-size: 11px;color: #06529D; font-weight: bold;"
-                        class="underline_link">Investing.com 日本</a> によって機能された外国為替チャート。</span></span></div> -->
-        <!-- <iframe class="grid" src="https://jp.widgets.investing.com/top-cryptocurrencies?theme=darkTheme" width="35%"
-            height="60%" frameborder="0" allowtransparency="true" marginwidth="0" marginheight="0"> ほい </iframe> -->
-        <!-- <div class="poweredBy" style="font-family: Arial, Helvetica, sans-serif;">提供は <a
-                href="https://jp.investing.com?utm_source=WMT&amp;utm_medium=referral&amp;utm_campaign=TOP_CRYPTOCURRENCIES&amp;utm_content=Footer%20Link"
-                target="_blank" rel="nofollow">Investing.com</a></div> -->
-        <iframe class="grid"
-            src="https://sslcharts.forexprostools.com/index.php?force_lang=11&pair_ID=21&timescale=1800&candles=50&style=candles"></iframe>
-        <!-- <div style="width:500px"><a target="_blank" href="https://jp.investing.com"><img
-                    src="https://wmt-invdn-com.akamaized.net/forexpros_jp_logo.png" alt="Investing.com"
-                    title="Investing.com" style="float:left" border="0" /></a><span style="float:right"><span
-                    style="font-size: 11px;color: #333333;text-decoration: none;"><a href="https://jp.investing.com/"
-                        rel="nofollow" target="_blank" style="font-size: 11px;color: #06529D; font-weight: bold;"
-                        class="underline_link">Investing.com 日本</a> によって機能された外国為替チャート。</span></span></div> -->
-        <!-- <span class="grid" id="news"></span> -->
-        <!-- <iframe class="grid"
-            src="https://ssltvc.forexprostools.com/?pair_ID=8827&interval=1800&plotStyle=area&domain_ID=11&lang_ID=11&timezone_ID=27"></iframe> -->
-        <!-- <iframe class="grid"
-            src="https://ssltvc.forexprostools.com/?pair_ID=44336&height=480&width=650&interval=1800&plotStyle=area&domain_ID=11&lang_ID=11&timezone_ID=27"></iframe> -->
-        <!-- <iframe class="grid"
-            src="https://ssltvc.forexprostools.com/?pair_ID=178&height=480&width=650&interval=1800&plotStyle=area&domain_ID=11&lang_ID=11&timezone_ID=27"></iframe> -->
-        <!-- <span class="grid">
-            <div class="nomics-ticker-widget" data-name="PETROLEUM" data-base="OIL" data-quote="USD"></div>
-            <script src="https://widget.nomics.com/embed.js"></script>
-        </span> -->
-    </p>
-    <p class="container2">
-        <iframe class="grid2" src="https://ssltvc.forexprostools.com/?pair_ID=8827&interval=1800&plotStyle=bars&domain_ID=11&lang_ID=11&timezone_ID=27"></iframe>
-        <iframe class="grid2" src="https://ssltvc.forexprostools.com/?pair_ID=178&interval=1800&plotStyle=bars&domain_ID=11&lang_ID=11&timezone_ID=27"></iframe>
-        <iframe class="grid2" src="https://ssltvc.forexprostools.com/?pair_ID=44336&interval=1800&plotStyle=bars&domain_ID=11&lang_ID=11&timezone_ID=27"></iframe>
-    </p>
-</body>
-
-</html>
+    </script> -->
+<!-- </head> -->
