--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
+    <style>
+        html, body {
+            height: 100%;
+        }
+    </style>
+
     <title>MC Charts</title>
   </head>
   <body>
@@ -19,8 +25,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
-    <div class="container">
-        <div class="row">
+    <div class="container-fluid h-50">
+        <div class="row h-50">
             <iframe class="col-lg" id="hoge"
                 src="https://sslcharts.forexprostools.com/index.php?force_lang=11&pair_ID=3&timescale=1800&candles=50&style=candles"></iframe>
             <!-- <div style="width:500px"><a target="_blank" href="https://jp.investing.com"><img
@@ -46,7 +52,7 @@
                             rel="nofollow" target="_blank" style="font-size: 11px;color: #06529D; font-weight: bold;"
                             class="underline_link">Investing.com 日本</a> によって機能された外国為替チャート。</span></span></div> -->
         </div>
-        <div class="row">
+        <div class="row h-50">
             <iframe class="col-lg"
                 src="https://sslcharts.forexprostools.com/index.php?force_lang=11&pair_ID=68&timescale=1800&candles=50&style=candles"></iframe>
             <!-- <div style="width:500px"><a target="_blank" href="https://jp.investing.com"><img
@@ -82,8 +88,8 @@
             <div class="col-lg"></div>
         </div>
     </div>
-    <div class="container">
-        <div class="row">
+    <div class="container-fluid h-50">
+        <div class="row h-100">
             <iframe class="col-lg" src="https://ssltvc.forexprostools.com/?pair_ID=8827&interval=1800&plotStyle=bars&domain_ID=11&lang_ID=11&timezone_ID=27"></iframe>
             <iframe class="col-lg" src="https://ssltvc.forexprostools.com/?pair_ID=178&interval=1800&plotStyle=bars&domain_ID=11&lang_ID=11&timezone_ID=27"></iframe>
             <iframe class="col-lg" src="https://ssltvc.forexprostools.com/?pair_ID=44336&interval=1800&plotStyle=bars&domain_ID=11&lang_ID=11&timezone_ID=27"></iframe>    
