--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
-    <div class="container-fluid h-60">
+    <div class="container-fluid h-75">
         <div class="row h-50">
             <iframe class="col-lg" id="hoge"
                 src="https://sslcharts.forexprostools.com/index.php?force_lang=11&pair_ID=3&timescale=1800&candles=50&style=candles"></iframe>
@@ -92,7 +92,14 @@
             <div class="col-lg"></div>
         </div>
     </div>
-    <div class="container-fluid h-40">
+    <div class="container-fluid h-25">
+        <div class="row h-100">
+            <span class="mx-auto" style="font-size: 6em; vertical-align: middle;">
+                ニュースフィード建設予定地
+            </span>
+        </div>
+    </div>
+    <div class="container-fluid h-60">
         <div class="row h-100">
             <iframe class="col-lg" src="https://ssltvc.forexprostools.com/?pair_ID=8827&interval=1800&plotStyle=bars&domain_ID=11&lang_ID=11&timezone_ID=27"></iframe>
             <iframe class="col-lg" src="https://ssltvc.forexprostools.com/?pair_ID=178&interval=1800&plotStyle=bars&domain_ID=11&lang_ID=11&timezone_ID=27"></iframe>
