--- a/index.html
+++ b/index.html
@@ -57,27 +57,31 @@
                             class="underline_link">Investing.com 日本</a> によって機能された外国為替チャート。</span></span></div> -->
         </div>
         <div class="row h-50">
-            <iframe class="col-lg"
-                src="https://sslcharts.forexprostools.com/index.php?force_lang=11&pair_ID=68&timescale=1800&candles=50&style=candles"></iframe>
+            <iframe class="col-lg" src="https://sslcharts.forexprostools.com/index.php?force_lang=11&pair_ID=68&timescale=1800&candles=50&style=candles"></iframe>
             <!-- <div style="width:500px"><a target="_blank" href="https://jp.investing.com"><img
                         src="https://wmt-invdn-com.akamaized.net/forexpros_jp_logo.png" alt="Investing.com"
                         title="Investing.com" style="float:left" border="0" /></a><span style="float:right"><span
                         style="font-size: 11px;color: #333333;text-decoration: none;"><a href="https://jp.investing.com/"
                             rel="nofollow" target="_blank" style="font-size: 11px;color: #06529D; font-weight: bold;"
                             class="underline_link">Investing.com 日本</a> によって機能された外国為替チャート。</span></span></div> -->
-            <!-- <iframe class="grid" src="https://jp.widgets.investing.com/top-cryptocurrencies?theme=darkTheme" width="35%"
-                height="60%" frameborder="0" allowtransparency="true" marginwidth="0" marginheight="0"> ほい </iframe> -->
-            <!-- <div class="poweredBy" style="font-family: Arial, Helvetica, sans-serif;">提供は <a
-                    href="https://jp.investing.com?utm_source=WMT&amp;utm_medium=referral&amp;utm_campaign=TOP_CRYPTOCURRENCIES&amp;utm_content=Footer%20Link"
-                    target="_blank" rel="nofollow">Investing.com</a></div> -->
-            <iframe class="col-lg"
-                src="https://sslcharts.forexprostools.com/index.php?force_lang=11&pair_ID=21&timescale=1800&candles=50&style=candles"></iframe>
-            <!-- <div style="width:500px"><a target="_blank" href="https://jp.investing.com"><img
-                        src="https://wmt-invdn-com.akamaized.net/forexpros_jp_logo.png" alt="Investing.com"
-                        title="Investing.com" style="float:left" border="0" /></a><span style="float:right"><span
-                        style="font-size: 11px;color: #333333;text-decoration: none;"><a href="https://jp.investing.com/"
-                            rel="nofollow" target="_blank" style="font-size: 11px;color: #06529D; font-weight: bold;"
-                            class="underline_link">Investing.com 日本</a> によって機能された外国為替チャート。</span></span></div> -->
+            <iframe class="col-lg" src="https://sslcharts.forexprostools.com/index.php?force_lang=11&pair_ID=21&timescale=1800&candles=50&style=candles"></iframe>
+            <div class="col-lg" style="position: relative;">
+                <span style="position: absolute; bottom: 0%;">
+                    <a target="_blank" href="https://jp.investing.com">
+                        <img src="https://wmt-invdn-com.akamaized.net/forexpros_jp_logo.png" alt="Investing.com"
+                            title="Investing.com" />
+                    </a>
+                    <span style="float:right">
+                        <span style="font-size: 11px;color: #333333;text-decoration: none;">
+                            <a href="https://jp.investing.com/" rel="nofollow" target="_blank" style="font-size: 11px;color: #06529D; font-weight: bold;"
+                                class="underline_link">
+                                Investing.com 日本
+                            </a>
+                            によって機能された外国為替チャート。
+                        </span>
+                    </span>
+                </span>
+            </div>
             <!-- <span class="grid" id="news"></span> -->
             <!-- <iframe class="grid"
                 src="https://ssltvc.forexprostools.com/?pair_ID=8827&interval=1800&plotStyle=area&domain_ID=11&lang_ID=11&timezone_ID=27"></iframe> -->
@@ -89,7 +93,6 @@
                 <div class="nomics-ticker-widget" data-name="PETROLEUM" data-base="OIL" data-quote="USD"></div>
                 <script src="https://widget.nomics.com/embed.js"></script>
             </span> -->
-            <div class="col-lg"></div>
         </div>
     </div>
     <div class="container-fluid h-25">
